--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-razorpay": "^3.0.1",
     "react-redux": "^9.2.0",
